Regression: Unexpected result with curve to mesh on cyclic bezier curve with automatic or vector handles #99850

Closed
opened 2022-07-19 22:52:53 +02:00 by D0ppelgaenger · 11 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59

Blender Version
Broken: version: 3.3.0 Alpha, 3.2-release
Worked: 3.1
Caused by 7484f274dc

Short description of error
The result of a curve to mesh with a profile curve, on a cyclic Bezier curve, with auto or vector handles creates a mesh that is incorrect at the original's curve start/endpoint (looks like the normal at the start/endpoint of the curve is incorrectly calculated, resulting in an incorrect mesh)

Exact steps for others to reproduce the error
Delete everything
Add Curve Circle
Add GN modifier to curve
Add Set spline type node, set to Bezier
Add Set handle type node, set to auto or vector
Add curve to mesh with curve circle as Profile Curve
The generated mesh is incorrect at the former endpoint

Test File (includes all steps):
#99850.blend
CyclicBezier.png
CyclicBezier2.png

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59 **Blender Version** Broken: version: 3.3.0 Alpha, 3.2-release Worked: 3.1 Caused by 7484f274dc **Short description of error** The result of a curve to mesh with a profile curve, on a cyclic Bezier curve, with auto or vector handles creates a mesh that is incorrect at the original's curve start/endpoint (looks like the normal at the start/endpoint of the curve is incorrectly calculated, resulting in an incorrect mesh) **Exact steps for others to reproduce the error** Delete everything Add Curve Circle Add GN modifier to curve Add Set spline type node, set to Bezier Add Set handle type node, set to auto or vector Add curve to mesh with curve circle as Profile Curve The generated mesh is incorrect at the former endpoint Test File (includes all steps): [#99850.blend](https://archive.blender.org/developer/F13302857/T99850.blend) ![CyclicBezier.png](https://archive.blender.org/developer/F13301422/CyclicBezier.png) ![CyclicBezier2.png](https://archive.blender.org/developer/F13301434/CyclicBezier2.png)
Author

Added subscriber: @Leo-Luther

Added subscriber: @Leo-Luther
D0ppelgaenger changed title from Geometrynodes: Unexpected result with curve to mesh on cyclic bezier curve with automatic handles to Geometrynodes: Unexpected result with curve to mesh on cyclic bezier curve with automatic or vector handles 2022-07-19 23:01:46 +02:00

Added subscriber: @mod_moder

Added subscriber: @mod_moder

I can confirm.
Also, resampling or manual derivation of the normal and tangent (like instant (vector to angle)) do not indicate a breakdown. It looks like the case is at the very node of the curve to mesh.
In 3.2 it is not reproduced. Regression.

Example:
fthdrt.blend

Edit:
There is a suspicion that this is an interpolation for cyclicity

I can confirm. Also, resampling or manual derivation of the normal and tangent (like instant (vector to angle)) do not indicate a breakdown. It looks like the case is at the very node of the curve to mesh. In 3.2 it is not reproduced. Regression. Example: [fthdrt.blend](https://archive.blender.org/developer/F13301447/fthdrt.blend) Edit: There is a suspicion that this is an interpolation for cyclicity
Author

For me, it is happening in 3.2 too
image.png

For me, it is happening in 3.2 too ![image.png](https://archive.blender.org/developer/F13301476/image.png)

3.2 alpha - correct
3.2 betta - wrong

3.2 alpha - correct 3.2 betta - wrong
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade changed title from Geometrynodes: Unexpected result with curve to mesh on cyclic bezier curve with automatic or vector handles to Regression: Unexpected result with curve to mesh on cyclic bezier curve with automatic or vector handles 2022-07-20 01:54:46 +02:00
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

First bad commit is 7484f274dc
cc @HooglyBoogly ^

First bad commit is 7484f274dc cc @HooglyBoogly ^

This issue was referenced by 332d547ab7

This issue was referenced by 332d547ab7bc99604b31f20cb300a38277629787
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-07-25 13:10:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99850
No description provided.