Fix T99850: incorrect tangents on evaluated bezier curves

Cyclic curves don't need the tangent correction based on the first
and last handle position.